# aoc2022

./: .gitignore
day1/: main.rs
day10/: CMakeLists.txt
day10/src/: p1.cpp
day11/src/: p1.cpp
day12/: CMakeLists.txt
day12/src/: p1.cpp
day13/: CMakeLists.txt
day13/src/: p1.cpp
day14/: CMakeLists.txt
day14/src/: p1.cpp
day15/: CMakeLists.txt
day15/src/: p1.cpp
day16/: CMakeLists.txt
day16/src/: p1.cpp
day2/: day2.py
day21/: CMakeLists.txt
day21/src/: p1.cpp
day3/: part1.py  part2.py
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/src/: main.rs
day7/: CMakeLists.txt  Cargo.toml  Makefile
day7/src/: main.rs  p1.cpp
day8/: CMakeLists.txt
day8/src/: p1.cpp
day9/: CMakeLists.txt
day9/src/: p1.cpp
